add Submitted Projects Section and its CSS
modified notes in paragraphs

--- a/index.html
+++ b/index.html
@@ -79,6 +79,29 @@
             margin: 5px 0;
         }
 
+        /* Submitted Projects Section Styles */
+        #submitted-projects {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
+        #submitted-projects h3 {
+            color: #4CAF50;
+        }
+        .project-update {
+            margin: 15px 0;
+            padding: 10px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+        .project-update h4 {
+            margin-bottom: 5px;
+            color: #333;
+        }
+
         /* Responsive Layout */
         @media only screen and (max-width: 600px) {
             nav {
@@ -112,9 +135,9 @@
 </header>
 
 <section id="welcome-note">
-    <h2>TWIPLA - Your Gateway to Innovation and Investment!</h2>
-    <p>At TWIPLA, we believe in the power of collaboration and the transformative potential of brilliant ideas. Whether you are an aspiring entrepreneur with a groundbreaking project, an investor looking for the next big opportunity, or a financial institution ready to support innovation, TWIPLA connects you with the right partners to bring your visions to life. Join a community where ideas turn into impactful ventures, and together, we create a brighter future through teamwork and investment.</p>
-    <p>Explore the possibilities, connect with like-minded individuals, and take the first step toward making your entrepreneurial dreams a reality. Welcome to the future of innovation!</p>
+    <h2>TWIPLA - Your Gateway to Innovation and Investment through pitching events!</h2>
+    <p>At TWIPLA, we believe in the power of collaboration and the transformative potential of brilliant ideas. Whether you are an aspiring entrepreneur with a groundbreaking project, an investor looking for the next big opportunity, or a financial institution ready to support innovation, TWIPLA connects you with the right partners to bring your visions to life. Join a community where ideas turn into impactful ventures through pitching events, and together, we create a brighter future through teamwork and investment.</p>
+    <p>Explore the possibilities, connect with like-minded individuals, and take the first step toward making your entrepreneurial dreams a reality by participating in TWIPLA pitching events. Welcome to the future of innovation!</p>
 </section>
 
 <nav>
@@ -125,15 +148,15 @@
 </nav>
 
 <section id="entrepreneur">
-    <h3>Specialized Entrepreneur Team Entry</h3>
-    <p>Welcome to TWIPLA, the platform where Specialized entrepreneur team transform their innovative ideas into funded ventures. Whether you're embarking on a new entrepreneurial journey or seeking financial support for your studies, TWIPLA connects you with investors and banks. Collaborate with fellow students to create strong, convincing business projects and unlock opportunities to make your vision a reality. Together, we turn ambition into success!</p>
-    <p>If you're a postgraduate entrepreneur students team or cohort looking for funding, submit your business idea through the form below:</p>
+    <h3>Post Graduate Entrepreneur Team Entry</h3>
+    <p>Welcome to TWIPLA, the platform where Specialized entrepreneur teams transform their innovative ideas into funded ventures by participating in TWIPLA pitching events. Whether you're embarking on a new entrepreneurial journey or seeking financial support for your studies, TWIPLA connects you with investors and banks. Collaborate with fellow students to create strong, convincing business projects and unlock opportunities to make your vision a reality. Together, we turn ambition into success!</p>
+    <p>If you're a postgraduate entrepreneur student team or cohort looking for funding, submit your business idea through the form below and be prepared for TWIPLA pitching events:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScu6bCcWYVFZ5qxh329rH_OAAzZ2_hE6dyTsTWV1QgwNtRE8Q/viewform?usp=sf_link" target="_blank"><button>Submit Your Business Idea</button></a>
 </section>
 
 <section id="investor">
     <h3>Investor Entry</h3>
-    <p><strong>Invest in the Future of Innovation:</strong> At TWIPLA, investors have the opportunity to partner with passionate postgraduate students who are driven to make a difference in their fields. These students bring fresh ideas, cutting-edge solutions, and the determination to succeed. By investing in these ventures, you're not only helping turn groundbreaking ideas into reality, but you're also positioning yourself to benefit from the next generation of profitable, high-impact businesses. Join us in shaping the future, while reaping the rewards of your investment in tomorrow’s leaders.</p>
+    <p><strong>Invest in the Future of Innovation:</strong> At TWIPLA, investors have the opportunity to partner with passionate postgraduate students who are driven to make a difference in their fields. Post Graduates students bring fresh ideas, cutting-edge solutions, and the determination to succeed by participating in TWIPLA pitching events. By investing in these ventures, you're not only helping turn groundbreaking ideas into reality, but you're also positioning yourself to benefit from the next generation of profitable, high-impact businesses. Join us in shaping the future, while reaping the rewards of your investment in tomorrow’s leaders.</p>
     <p>Investors can sign up to view business ideas by postgraduate students and choose projects to fund:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSenHGKjgm-xBxP18oxg8k2N8oOPm0uZz4C6I6k7Uf3E231VXg/viewform?usp=sf_link" target="_blank"><button>Become an Investor</button></a>
 </section>
@@ -148,35 +171,64 @@
 <section id="bank">
     <h3>Bank Entry</h3>
     <p>Support the next generation of business leaders. By signing up as a bank on TWIPLA, you enable innovative ventures to receive the funding they need to thrive. Partner with entrepreneurs and investors to provide financial guidance and turn potential into growth.</p>
-    <p>Banks can join the platform to support funding and provide financial guidance for business ventures:</p>
+    <p>Banks can join the platform to support funding and provide financial guidance for business ventures by participating in TWIPLA pitching events:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeG3ZT5xCcssBDD2oOIMhEsscUSBWLS4i2kYx5If_prA92lQw/viewform?usp=sf_link" target="_blank"><button>Sign-Up as a Bank</button></a>
+</section>
+
+
+<!-- Submitted Projects Section -->
+<section id="submitted-projects">
+    <h3>Latest Submitted Projects</h3>
+
+    <!-- First Project -->
+    <div class="project-update">
+        <h4>Projects: Affordable Medical Gloves Production,Hematology diluent reagents production,Hemoglobin Meter production</h4>
+        <p><strong>Submitted By:</strong> Msc Biomedical Engineering Cohort 3 Entrepreneur team from UR-CEBE (https://cebe.ur.ac.rw/)  </p>
+        <p><strong>Submission Date:</strong> October 10, 2024</p>
+        <p><strong>Status:</strong> Under Review by Jasiri Talent Investor and Moderator team.</p>
+        <p><em>Last Updated: 3 days ago</em></p>
+    </div>
+
+    <!-- Second Project -->
+    <div class="project-update">
+        <h4>Project: Self power pumps </h4>
+        <p><strong>Submitted By:</strong> Msc Renewable Energy cohort 6 Entrepreneur team from UR-CST/ACE-ESD (https://aceesd.ur.ac.rw/home) </p>
+        <p><strong>Submission Date:</strong> October 23, 2024</p>
+        <p><strong>Status:</strong> Under Review by Jasiri Talent Investor and Moderator team .</p>
+        <p><em>Last Updated: 1 hour ago</em></p>
+    </div>
+
+    <!-- Add more project updates here -->
 </section>
 
 <!-- Recent Connections Section and pending connections -->
 <section id="recent-connections and pending connections">
-    <h3>Recent Connections and pending connections </h3>
+    <h3>Recent Connections and pending connections for participating in TWIPLA pitching events </h3>
     <div class="connection-update">
-        <p><strong>Msc Biomedical Engineering-Cohort 3</strong> has submitted a strong concept Business Idea note which attracted attention of <strong>Investors from norrsken house and Jasiri Talent Investor</strong> which will follow pitching through Business Model Canvas format.</p>
+        <p><strong>Msc Biomedical Engineering-Cohort 3</strong> has submitted a strong concept Business Ideas notes which attracted attention of <strong>Investors from Pharmalab Ltd, Norrsken House, Jasiri Talent Investor</strong> which will follow pitching using Business Model Canvas format.</p>
         <p><em>Last Updated: 10 minutes ago</em></p>
     </div>
-    <div class="connection-update">
-        <p><strong>Bank of Kigali and Kenya Commercial Bank</strong> are the current committed financial source of loan <strong>for pending connection between postgraduate entrepreneur students team or cohort</strong> and investors.</p>
-        <p><em>Last Updated: 30 minutes ago</em></p>
-    </div>
-    <div class="connection-update">
-        <p><strong>Best business analyst and Moderator Team</strong> has organized a first pitch event to be held at norrsken house <strong>Msc Biomedical Engineering-Cohort 3</strong> and <strong>the first selected investor which will be communicated soon</strong>.</p>
+
+<div class="connection-update">
+        <p><strong>Best business analyst and Moderator Team</strong> is organizing a first pitch event to be hosted by Norrsken House, Post graduate entrepreneurs who submitted projects will be communicated soon</strong>.</p>
         <p><em>Last Updated: 45 minutes ago</em></p>
     </div>
+
+    <div class="connection-update">
+        <p><strong>Bank of Kigali and Kenya Commercial Bank</strong> are the current committed financial source of loan <strong>for pending connection between postgraduate entrepreneur students team or cohort</strong> and investors.</p>
+        <p><em>Last Updated: 2 months ago</em></p>
+    </div>
+
 </section>
 
 <section id="partners">
     <h3>Our Partners</h3>
     <div class="partner">
-        <h4>Norrsken House</h4>
+        <h4>Norrsken House, https://site.norrsken.org/kigali</h4>
         <p>Bringing sustainable innovation to life, connecting entrepreneurs with resources to scale and expand.</p>
     </div>
     <div class="partner">
-        <h4>Jasiri Talent Investor</h4>
+        <h4>Jasiri Talent Investor, https://jasiri.org/jasiri-talent-investor/</h4>
         <p>Helping drive the success of innovative entrepreneurs by providing long-term, scalable funding.</p>
     </div>
 </section>
@@ -185,7 +237,7 @@
 
 <footer>
     <p>&copy; 2024 TWIPLA. All rights reserved. | Created by sim </p>
-    <p>Contact us: <a href="mailto:youremail@example.com">nzamubonasimeon@gmail.com</a> | Phone: +250 784803560 / +250 786854200</p>
+    <p>Contact us: <a href="mailto:youremail@example.com">twiplaevents@gmail.com</a> | Phone: +250 784803560 / +250 786854200</p>
     <p><a href="terms.html" style="color: white;">Terms & Conditions</a> | <a href="privacy.html" style="color: white;">Privacy Policy</a></p>
 </footer>
 
