added updates on project 4

--- a/index.html
+++ b/index.html
@@ -394,8 +394,16 @@ button:hover {
         <div class="project-update">
             <h4 onclick="toggleProject('project3')">Project 3: Dual charger of cell phone and laptops with power bank accessory from E wastes </h4>
             <div id="project3" class="project-content" style="display:none;">
-                <p>Project 3 submitted by Executive Global MBA with universitta cattolica de sacro del cuore </p>
+                <p>Project 3 submitted by cohort 4 of Executive Global MBA with universitta cattolica de sacro del cuore </p>
             </div>
+        </div>
+        <div class="project-update">
+            <h4 onclick="toggleProject('project4')">Project 4: Online Agriculture platform https://www.farmz2global.com/about </h4>
+            <div id="project4" class="project-content" style="display:none;">
+                <p>Project 4 submitted by Msc In Software Development entrepreneur student from Carnegie Mellon University https://www.africa.engineering.cmu.edu/ </p>
+            </div>
+        </div>
+      
         </div>
     </div>
 </section>
@@ -444,8 +452,8 @@ button:hover {
         </ul>
     </div>
 <div style="background-color: #4CAF50; padding: 20px; text-align: center;">
-        <p style="margin: 0; color: white;">&copy; 2024 TWIPLA. All rights reserved. | Created by sim</p>
-        <p style="margin: 5px 0;">Contact us: <a href="mailto:twiplaevents@gmail.com" style="color: white;">twiplaevents@gmail.com</a> | Phone: +250 784803560 / +250 786854200</p>
+        <p style="margin: 0; color: white;">&copy; 2024 TWIPLA. All rights reserved.</p>
+        <p style="margin: 5px 0;">Contact us: <a href="mailto:twiplaevents@gmail.com" style="color: white;">twiplaevents@gmail.com</a> | Phone: +250 784803560 </p>
         <p style="margin: 5px 0;">
             <a href="terms.html" style="color: white;">Terms & Conditions</a> | <a href="privacy.html" style="color: white;">Privacy Policy</a>
         </p>
